tests/NormalTests/paczka2/big_fuzzy/66262880.err
Error in line 4: Hr8hLXF5 S298 35,7
Error in line 13: Hr8hLXF5 A913 74,81
Error in line 5: Hr8hLXF5 A913 15,4
Error in line 36: RVObA S579 91,9
Error in line 39: A913 S298 -1,9
Error in line 46: GAd8X A913 82,6
Error in line 49: GAd8X S298 7,2
Error in line 69: htN S108 46,9
Error in line 70: htN A913 84,0
Error in line 74: GAd8X Sm79 17,7
Error in line 72: htN S108 68,3
Error in line 78: GAd8X S108 90,1
Error in line 66: H1XsuEzo A913 89,7
Error in line 111: RVObA S108 51,0
Error in line 112: RVObA S298 81,0
Error in line 115: RVObA S108 39,2
Error in line 119: H1XsuEzo S579 96,6
Error in line 103: Hr8hLXF5 A913 54,5
Error in line 123: hge S579 9_,9
Error in line 104: hge S298 3,7
Error in line 126: hge S579 224,5
Error in line 130: Hr8hLXF5 S579 152,
Error in line 125: GAd8X S298 69,7
Error in line 106: A913 S108 33,3
Error in line 139: htN S298 9,6
Error in line 142: Hr8hLXF5 S579 306,5
Error in line 132: GAd8X S579 22,4
Error in line 151: Hr8hLXF5 S298 51,8
Error in line 137: RVObA S108 13,8
Error in line 153: Hr8hLXF5 S579 33,6
Error in line 160: htN S579 49,01
Error in line 166: GAd8X A913 81,10
Error in line 173: GAd8X A913 212,9
Error in line 167: A913 A913 48,7
Error in line 186: H1XsuEzo S108 97,4
Error in line 164: htN S579 73,2
Error in line 187: H1XsuEzo A913 38,5
Error in line 196: H1XsuEzo S108 272,3
Error in line 199: htN S108 81,5
Error in line 204: Hr8hLXF5 S108 25,7
Error in line 184: A913 S108 3,4
Error in line 221: H1XsuEzo S579 122,9
Error in line 236: GAd8X A913 87,5
Error in line 237: GAd8X S298 9,0
Error in line 244: htN A913 43,0
Error in line 245: RVObA S108 57,2
